--- a/index.css
+++ b/index.css
@@ -9,12 +9,10 @@
     height: 100%;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-}
+*{margin:0px;
+    padding:0px;}
 
-#image-wrapper > canvas{
+#image-wrapper > #preview{
     width: 100%;
     height: 100%;
 }
